--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,6 +52,9 @@
               <h2>Keyboard commands</h2>
             </div>
         </div>
+        <div class="menu-item" id="camera-toggle">
+            <i class="fas fa-dove" aria-hidden="true" title="Toggle flight camera"></i>
+        </div>
     </div>
 
     <script type="module" src="./index.js"></script>
