--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,6 +56,9 @@
         <div class="menu-item" id="camera-toggle">
             <i class="fas fa-dove" aria-hidden="true" title="Toggle flight camera"></i>
         </div>
+        <div class="menu-item" id="image-capture">
+            <i class="fas fa-camera" aria-hidden="true" title="Take render snapshot"></i>
+        </div>
     </div>
 
     <script type="module" src="./index.js"></script>
