--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,10 +34,13 @@
         <div class="menu-item" id="settings-button">
             <i class="fas fa-sliders-h" aria-hidden="true" title="settings"></i>
             <div class="window" id="settings">
+              <!--
               <h2>Radiosity algorithms</h2>
               <div id="algorithms">
               </div>
               <div id="ambient" class="toggle-container"></div>
+              -->
+              <h2>Toggle camera type</h2>
               <div id="global" class="toggle-container"></div>
               <h2>Settings</h2>
               <div id="speed-slider" class="slider-container"></div>
@@ -58,6 +61,9 @@
         </div>
         <div class="menu-item" id="image-capture">
             <i class="fas fa-camera" aria-hidden="true" title="Take render snapshot"></i>
+        </div>
+        <div class="menu-item" id="open-help">
+            <i class="fas fa-question" aria-hidden="true" title="Open help screen"></i>
         </div>
     </div>
 
