Push before testing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
               <h2>Keyboard commands</h2>
             </div>
         </div>
-        <div class="menu-item" id="camera-toggle">
+        <div class="menu-item" id="camera-toggle" data-enabled="true">
             <i class="fas fa-dove" aria-hidden="true" title="Toggle flight camera"></i>
         </div>
         <div class="menu-item" id="image-capture">
