--- a/frontend/help.html
+++ b/frontend/help.html
@@ -28,7 +28,7 @@
         <div class="menu-item">
           <i class="fas fa-sliders-h" aria-hidden="true" title="settings"></i>
         </div>
-        <p>&larr; This buttons opens up a window that allows you to change visual features of the simulation.</p>
+        <p>&larr; This button opens up a window that allows you to change visual features of the simulation.</p>
       </div>
 
       <div class="help-item">
